--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "change-case": "^5.4.4",
+    "kleur": "^3.0.3",
     "prompts": "^2.4.2",
     "tsx": "^4.11.0"
   },
